Added video thumbs

--- a/include/articles/tema_amoroso_3.html
+++ b/include/articles/tema_amoroso_3.html
@@ -32,7 +32,7 @@
 						<p>Colpisce in particolar modo la volontà di Nahoko di mostrarsi sempre in forze e presentabile, cercando di mantenere intatta la sua bellezza per non far preoccupare Jiro, che ce la mette tutta per passare più tempo possibile con quella che è finalmente diventata sua moglie.</p>
 						<p>Vorrei inoltre sottolineare un ultimo dettaglio, questa volta legato al comparto degli effetti sonori. La scena in cui Jiro stringe la mano di Nahoko mentre è costretto a lavorare tutta la notte è a mio parere un capolavoro. Lui vorrebbe fumare una sigaretta, ma lei non vuole staccarsi dalla sua mano: entrambi però ritengono che valga la pena godersi il momento e rimanere vicini (anche se il fumo di una sigaretta non fa certo bene ai polmoni), poiché il tempo a disposizione della ragazza è ormai agli sgoccioli. E mentre ci godiamo uno splendido silenzio che dice più di mille parole, veniamo bruscamente presi alla sprovvista dal forte rumore di una pistola pneumatica, che ci riporta nell'hangar dove Jiro sta seguendo l'assemblaggio del suo aereo. Ancora una volta Miyazaki ci sorprende con una scelta stilistica di grande impatto: sceglie volutamente di inserire un rumore brusco e ad alto volume per accompagnare un cambio di scena che ci ricorda che i momenti magici tra Jiro e Nahoko sono come sogni, bruscamente interrotti dalla realtà a cui devono far fronte.</p>
 						<div class="media">
-							<video controls preload="metadata">
+							<video controls poster="../assets/sigaretta_thumb.jpg" preload="metadata">
 								<source src="../media/video/sigaretta.mp4" type="video/mp4">
 								Il file video non funziona? Scaricalo <a href="../media/video/sigaretta.mp4">qui</a>.
 							</video>
