--- a/include/articles/tema_storico_1.html
+++ b/include/articles/tema_storico_1.html
@@ -27,7 +27,7 @@
 						</div>
 						<p>In seguito ci vengono mostrati gli effetti concreti del terremoto: case distrutte, frane, danni alla rete elettrica.</p>
 						<div class="media">
-							<video controls preload="metadata">
+							<video controls poster="../assets/terremoto_thumb.jpg" preload="metadata">
 								<source src="../media/video/terremoto.mp4" type="video/mp4">
 								Il file video non funziona? Scaricalo <a href="../media/video/terremoto.mp4">qui</a>.
 							</video>
