Domain name fixes

--- a/include/articles/credits.html
+++ b/include/articles/credits.html
@@ -38,7 +38,7 @@
 							<li>Vincent, <i>"The Wind Rises"</i> &ndash; <a href="http://vincentsdeviantart.deviantart.com/art/The-Wind-Rises-Commentary-Included-436986194" target="_blank">DeviantArt</a>, <a href="http://vincentsillustration.tumblr.com/" target="_blank">Tumblr</a></li>
 							<li>tsukizu, <i>"Kaze Tachinu"</i> &ndash; <a href="http://tsukizu.deviantart.com/art/Kaze-Tachinu-436979206" target="_blank">DeviantArt</a></li>
 							<li>cow41087, <i>"The Wind Rises Tribute"</i> &ndash; <a href="http://cow41087.deviantart.com/art/The-Wind-Rises-Tribute-436561018" target="_blank">DeviantArt</a></li>
-							<li>JNIKEL, <i>"The Wind Rises: Foreshadow"</i> &ndash; <a href="http://jnikel.deviantart.com/art/The-Wind-Rises-Foreshadow-435968916" target="_blank">DeviantArt</a></li>
+							<li>JNIKEL, <i>"The Wind Rises: Foreshadow"</i> &ndash; <a href="http://jnikel.deviantart.com/art/The-Wind-Rises-Foreshadow-435968916" target="_blank">DeviantArt</a>, <a href="http://jnikel-art.tumblr.com/" target="_blank">Tumblr</a></li>
 							<li>SAkURA-JOkER, <i>"The Wind Rises"</i> &ndash; <a href="http://sakura-joker.deviantart.com/art/The-Wind-Rises-436354535" target="_blank">DeviantArt</a></li>
 							<li>Nerdvana21, <i>"Innovation by design"</i> &ndash; <a href="http://nerdvana21.deviantart.com/art/Innovation-by-design-436511988" target="_blank">DeviantArt</a></li>
 							<li>gaoshua, <i>"Tribute to The Wind Rises"</i> &ndash; <a href="http://gaoshua.deviantart.com/art/Tribute-to-The-Wind-Rises-436945850" target="_blank">DeviantArt</a></li>
