Added sponsored links and Google Analytics snippet

--- a/include/articles/bluray.html
+++ b/include/articles/bluray.html
@@ -6,7 +6,8 @@
 						<div class="media">
 							<a href="../media/img/bluray_cover.jpg" target="_blank"><img src="../media/img/bluray_cover_min.jpg" alt=""></a>
 						</div>
-						<p class="centered"><a href="http://www.amazon.it/dp/B00KMYYPZ0/" target="_blank">Acquista l'edizione Blu-ray su Amazon.it</a></p>
+						<p class="centered"><a href="http://www.amazon.it/gp/product/B00KMYYPZ0/ref=as_li_tf_tl?ie=UTF8&camp=3370&creative=23322&creativeASIN=B00KMYYPZ0&linkCode=as2&tag=sialilve-21">Acquista l'edizione Blu-ray su Amazon.it</a><img src="http://ir-it.amazon-adsystem.com/e/ir?t=sialilve-21&l=as2&o=29&a=B00KMYYPZ0" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></p>
+						<p class="centered"><a href="http://www.amazon.it/gp/product/B00KMYYPUA/ref=as_li_tf_tl?ie=UTF8&camp=3370&creative=23322&creativeASIN=B00KMYYPUA&linkCode=as2&tag=sialilve-21">Acquista l'edizione DVD su Amazon.it</a><img src="http://ir-it.amazon-adsystem.com/e/ir?t=sialilve-21&l=as2&o=29&a=B00KMYYPUA" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></p>
 						<div class="person"></div>
 						<h2>Dati tecnici</h2>
 						<table>
@@ -66,7 +67,9 @@
 						<div class="person"></div>
 						<h2>Sinossi</h2>
 						<p>Jiro sogna di volare e progettare aeroplani ispirandosi al famoso ingegnere aeronautico italiano Gianni Caproni. Miope fin dalla giovane età e pertanto impossibilitato a diventare pilota, nel 1927 entra a lavorare in una delle principali società giapponesi di ingegneria aeronautica. Sono anni importanti quelli per Jiro, perché ha modo di mostrare l'innato talento che lo farà diventare uno dei progettatori aeronautici più affermati al mondo ma soprattutto perché inizia a frequentare la dolce Nahoko, il suo più grande amore, oltre al cielo...</p>
-						<p class="centered"><a href="http://www.amazon.it/dp/B00KMYYPZ0/" target="_blank">Acquista l'edizione Blu-ray su Amazon.it</a></p>
+						<div class="person"></div>
+						<p class="centered"><a href="http://www.amazon.it/gp/product/B00KMYYPZ0/ref=as_li_tf_tl?ie=UTF8&camp=3370&creative=23322&creativeASIN=B00KMYYPZ0&linkCode=as2&tag=sialilve-21">Acquista l'edizione Blu-ray su Amazon.it</a><img src="http://ir-it.amazon-adsystem.com/e/ir?t=sialilve-21&l=as2&o=29&a=B00KMYYPZ0" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></p>
+						<p class="centered"><a href="http://www.amazon.it/gp/product/B00KMYYPUA/ref=as_li_tf_tl?ie=UTF8&camp=3370&creative=23322&creativeASIN=B00KMYYPUA&linkCode=as2&tag=sialilve-21">Acquista l'edizione DVD su Amazon.it</a><img src="http://ir-it.amazon-adsystem.com/e/ir?t=sialilve-21&l=as2&o=29&a=B00KMYYPUA" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></p>
 						<div class="person"></div>
 						<h2>Copyright</h2>
 						<p>&copy; 2014 Luckyred Homevideo. All rights reserved.<br>
