--- a/include/articles/miyazaki_5.html
+++ b/include/articles/miyazaki_5.html
@@ -37,7 +37,7 @@
 						<div class="media">
 							<a href="../media/img/miyazaki17.png" target="_blank"><img src="../media/img/miyazaki17.jpg" alt=""></a>
 						</div>
-						<p>Nel documentario <i>"The Kingdom of Dreams and Madness"</i> infatti ci viene raccontato di come Takahata trovò il suo primo impiego alla Toei Animation, e di come Miyazaki si unì a lui quattro anni dopo; fu così che ebbe inizio il binomio che condusse alla creazione dello Studio Ghibli.</p>
+						<p>Nel documentario <i>"<a href="http://www.amazon.it/gp/product/B00IP13GSE/ref=as_li_tf_tl?ie=UTF8&camp=3370&creative=23322&creativeASIN=B00IP13GSE&linkCode=as2&tag=sialilve-21">The Kingdom of Dreams and Madness</a><img src="http://ir-it.amazon-adsystem.com/e/ir?t=sialilve-21&l=as2&o=29&a=B00IP13GSE" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />"</i> infatti ci viene raccontato di come Takahata trovò il suo primo impiego alla Toei Animation, e di come Miyazaki si unì a lui quattro anni dopo; fu così che ebbe inizio il binomio che condusse alla creazione dello Studio Ghibli.</p>
 						<p>È possibile che il punto d'incontro tra i binomi Jiro-Honjo e Miyazaki-Takahata sia "soltanto" questo, ma posso sicuramente capire perchè <i>Si Alza il Vento</i> abbia fatto versare qualche lacrima al maestro. Risulta evidente che in questa pellicola Miyazaki abbia riversato davvero tutto sé stesso, e ci terrei a ringraziarlo personalmente per aver condiviso gran parte della sua storia personale con tutto il suo pubblico. Non dev'essere stato per niente facile.</p>
 						<div class="colonne clearfix">
 							<div class="previous">
