--- a/include/articles/tema_amoroso_3.html
+++ b/include/articles/tema_amoroso_3.html
@@ -47,7 +47,7 @@
 						<div class="media">
 							<a href="../media/img/amore_16.png" target="_blank"><img src="../media/img/amore_16.jpg" alt=""></a>
 						</div>
-						<p class="curiosita"><b>Curiosità:</b> Nel documentario intitolato <i>"The Kingdom of Dreams and Madness"</i>, che si basa sulla realizzazione in studio del film, sentiamo Miyazaki istruire alcuni disegnatori sull'ultima scena. Inizialmente l'idea era quella di far dire a Nahoko la battuta: <i>"Vieni mio caro, vieni"</i>. Fortunatamente quel pezzo è stato poi cambiato con un'esortazione a vivere, altrimenti avrei pianto persino dall'anima.</p>
+						<p class="curiosita"><b>Curiosità:</b> Nel documentario intitolato <i>"<a href="http://www.amazon.it/gp/product/B00IP13GSE/ref=as_li_tf_tl?ie=UTF8&camp=3370&creative=23322&creativeASIN=B00IP13GSE&linkCode=as2&tag=sialilve-21">The Kingdom of Dreams and Madness</a><img src="http://ir-it.amazon-adsystem.com/e/ir?t=sialilve-21&l=as2&o=29&a=B00IP13GSE" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />"</i>, che si basa sulla realizzazione in studio del film, sentiamo Miyazaki istruire alcuni disegnatori sull'ultima scena. Inizialmente l'idea era quella di far dire a Nahoko la battuta: <i>"Vieni mio caro, vieni"</i>. Fortunatamente quel pezzo è stato poi cambiato con un'esortazione a vivere, altrimenti avrei pianto persino dall'anima.</p>
 						<p>Il vento dunque recita un ruolo importantissimo anche in questa pellicola finale del regista nipponico, come in molte delle sue altre produzioni: è simbolo di cambiamento, sussura brutte notizie e ricongiunge un amore che sembrava smarrito o dimenticato. È vero, il protagonista del film è Jiro Horikoshi, ma il vento si erge ancora una volta come una romantica brezza che soffia delicatamente forti emozioni nei nostri cuori.<p>
 						<p>Un'ultima menzione sul tema del matrimonio la merita sicuramente il personaggio di Honjo. A lui vengono affidate le critiche al governo e le spiegazioni storiche, che ci inseriscono in uno splendido setting narrativo. Tuttavia ci offre anche un curioso punto di vista sul sentimento amoroso che si scontra un po' con quello dello stesso Jiro. Verso la fine della scena di dialogo che denuncia la povertà delle famiglie giapponesi, accompagnata da tè e siberia, Honjo dice con fare noncurante:</p>
 						<div class="quote">
@@ -58,7 +58,7 @@
 						<div class="media">
 							<a href="../media/img/amore_17.png" target="_blank"><img src="../media/img/amore_17.jpg" alt=""></a>
 						</div>
-						<p>Un rapporto particolare quindi, quello tra Jiro e il suo amico e collega, che esploreremo più a fondo tra poco, grazie agli spunti di riflessione forniti ancora una volta dal già citato documentario sullo studio Ghibli <i>"The Kingdom of Dreams and Madness"</i>.</p>
+						<p>Un rapporto particolare quindi, quello tra Jiro e il suo amico e collega, che esploreremo più a fondo tra poco, grazie agli spunti di riflessione forniti ancora una volta dal già citato documentario sullo studio Ghibli <i>"<a href="http://www.amazon.it/gp/product/B00IP13GSE/ref=as_li_tf_tl?ie=UTF8&camp=3370&creative=23322&creativeASIN=B00IP13GSE&linkCode=as2&tag=sialilve-21">The Kingdom of Dreams and Madness</a><img src="http://ir-it.amazon-adsystem.com/e/ir?t=sialilve-21&l=as2&o=29&a=B00IP13GSE" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />"</i>.</p>
 						<div class="colonne clearfix">
 							<div class="previous">
 								<a href="tema_amoroso_2">&larr; Pagina precedente</a>
