--- a/include/articles/cast_tecnico.html
+++ b/include/articles/cast_tecnico.html
@@ -65,7 +65,8 @@
 							</tr>
 						</table>
 						<div class="person"></div>
-						<p class="centered"><a href="http://www.amazon.it/dp/B00KMYYPZ0/" target="_blank">Acquista l'edizione Blu-ray su Amazon.it</a></p>
+						<p class="centered"><a href="http://www.amazon.it/gp/product/B00KMYYPZ0/ref=as_li_tf_tl?ie=UTF8&camp=3370&creative=23322&creativeASIN=B00KMYYPZ0&linkCode=as2&tag=sialilve-21">Acquista l'edizione Blu-ray su Amazon.it</a><img src="http://ir-it.amazon-adsystem.com/e/ir?t=sialilve-21&l=as2&o=29&a=B00KMYYPZ0" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></p>
+						<p class="centered"><a href="http://www.amazon.it/gp/product/B00KMYYPUA/ref=as_li_tf_tl?ie=UTF8&camp=3370&creative=23322&creativeASIN=B00KMYYPUA&linkCode=as2&tag=sialilve-21">Acquista l'edizione DVD su Amazon.it</a><img src="http://ir-it.amazon-adsystem.com/e/ir?t=sialilve-21&l=as2&o=29&a=B00KMYYPUA" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></p>
 						<div class="person"></div>
 						<h2>Copyright</h2>
 						<p>&copy; 2014 Luckyred Homevideo. All rights reserved.<br>
