--- a/include/articles/miyazaki.html
+++ b/include/articles/miyazaki.html
@@ -12,7 +12,7 @@
 						<p>Forse non tutti sanno che il film è nato da un breve manga disegnato dallo stesso regista &ndash; intitolato proprio <i>"Kaze Tachinu"</i> come il film &ndash; per la rivista Model Graphix, un magazine giapponese dedicato al modellismo. In esso veniva raccontata la storia di Jiro fino alla costruzione del primo Zero, mescolata ad elementi tratti dall'omonimo romanzo di Tatsuo Hori, nel quale lo scrittore nipponico raccontava la sua esperienza di vita con la fidanzata malata di tubercolosi. La traduzione occidentale del titolo è stata invece tratta da un'opera dello scrittore e poeta francese Paul Valéry, <i>"Le Cimetière marin"</i>.</p>
 						<div class="media">
 							<a href="../media/img/romanzo.jpg" target="_blank"><img src="../media/img/romanzo_min.jpg" alt="Romanzo Si Alza il Vento di Tatsuo Hori"></a>
-							<p class="didascalia">Il romanzo "Si Alza il Vento" di Tatsuo Hori.<br><a href="http://www.amazon.it/dp/8898002629/">Clicca qui per acquistarlo su Amazon</a>.</p>
+							<p class="didascalia">Il romanzo "Si Alza il Vento" di Tatsuo Hori.<br><a href="http://www.amazon.it/gp/product/8898002629/ref=as_li_tf_tl?ie=UTF8&camp=3370&creative=23322&creativeASIN=8898002629&linkCode=as2&tag=sialilve-21">Clicca qui per acquistarlo su Amazon</a><img src="http://ir-it.amazon-adsystem.com/e/ir?t=sialilve-21&l=as2&o=29&a=8898002629" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" />.</p>
 						</div>
 						<p>Vi è inoltre un interessante spunto di riflessione nello stesso manga, pubblicato nel 2009, che ci fa notare come Miyazaki avesse curiosamente dipinto Jiro e i suoi colleghi progettisti con tratti suini, quasi a condannarne le azioni scellerate.</p>
 						<div class="colonne clearfix">
