Added link to start reading

--- a/include/articles/home.html
+++ b/include/articles/home.html
@@ -1,10 +1,10 @@
-<header class="clearfix" id="bg-home">
+<a href="prefazione"><header class="clearfix" id="bg-home">
 					<h1></h1>
-				</header>
+				</header></a>
 				<section>
-					<article>
+					<a href="prefazione"><article>
 						<h1>Si Alza il Vento</h1>
 						<h2>Un film per il cuore ancora prima che per gli occhi</h2>
 						<h3>Analisi personale dell'opera e delle sue tematiche</h3>
 						<h4>a cura di Andrea Di Nuzzo<br>Hintclub S.r.l.s.</h4>
-					</article>
+					</article></a>
