--- a/include/articles/introduzione.html
+++ b/include/articles/introduzione.html
@@ -39,9 +39,10 @@
 						</table>
 						<div class="person"></div>
 						<p class="curiosita"><b>Sinossi:</b> Jiro Horikoshi è un progettista di aeroplani vissuto all'inizio del '900, un periodo storico piuttosto oscuro per il genere umano e in particolare per il Giappone, patria del regista Miyazaki. Una serie di situazioni spiacevoli e il rapporto onirico con uno dei più grandi rappresentanti dell'aviazione italiana, il Conte Giovanni Battista Caproni, saranno il motore della narrazione e condurranno il protagonista tra le braccia di una dolcissima fanciulla, Nahoko Satomi.</p>
-						<p>Benchè questo lavoro parta con una scheda tecnica del film, non è mia intenzione recensire la pellicola, bensì fornire un'accurata analisi strutturata che si prefissa due principali obbiettivi:</p>
+						<p>Benchè questo lavoro parta con una scheda tecnica del film, non è mia intenzione recensire la pellicola, bensì fornire un'accurata analisi strutturata che si prefissa tre principali obbiettivi:</p>
 						<ol>
-							<li>Sviluppare gli argomenti trattati nel film secondo la mia personale percezione.</li>
+							<li>Fare chiarezza e informazione sul cinema Miyazakiano e i suoi significati, in modo da conferirgli la considerazione che merita anche sul territorio nazionale;
+							<li>Sviluppare gli argomenti trattati nel film secondo la mia personale percezione;</li>
 							<li>Raccontare le emozioni che ha suscitato in me, parlando a cuore aperto.</li>
 						</ol>
 						<div class="person"></div>
