--- a/include/articles/critica_2.html
+++ b/include/articles/critica_2.html
@@ -91,7 +91,7 @@
 						<div class="media">
 							<a href="../media/img/critica09.png" target="_blank"><img src="../media/img/critica09.jpg" alt=""></a>
 						</div>
-						<p>Il produttore storico Toshio Suzuki sostiene che in fin dei conti ciò che importa veramente in ambito lavorativo è circondarsi di persone fantastiche. Beh, direi che se facessimo la conta dei presenti potremmo constatare che il Ghibli e il suo staff hanno scelto divinamente: il frutto degli sforzi di un ambiente lavorativo così minuzioso e appassionato <b>si nota eccome</b>.
+						<p>Il produttore storico Toshio Suzuki sostiene che in fin dei conti ciò che importa veramente in ambito lavorativo è circondarsi di persone fantastiche. Beh, direi che se facessimo la conta dei presenti potremmo constatare che il Ghibli e il suo staff hanno scelto divinamente: il frutto degli sforzi di un ambiente lavorativo così minuzioso e appassionato <b>si nota eccome</b>.</p>
 						<div class="colonne clearfix">
 							<div class="previous">
 								<a href="critica_1">&larr; Pagina precedente</a>
