--- a/include/articles/prefazione.html
+++ b/include/articles/prefazione.html
@@ -12,7 +12,7 @@
 						<p>Con l'intenzione di trasmettere anche ad altri le sensazioni che ritengo possano derivare dalla visione delle opere di uno degli studi d'animazione più rinomati al mondo, ho deciso di parlare a cuore aperto dell'ultima pellicola del mio regista preferito: Hayao Miyazaki, uno dei fondatori dello Studio stesso.</p>
 						<div class="person"></div>
 						<h2>Disclaimer</h2>
-						<p>Questo lavoro di analisi è un'opera indipendente, parte del portfolio di contenuti offerto dall'azienda Hintclub S.r.l.s. e in nessun modo affiliata con Studio Ghibli o Lucky Red. Tutti i diritti riguardanti nomi, loghi, contenuti audiovisivi e altri trademark sono riservati ai rispettivi detentori di copyright.</p>
+						<p>Questo lavoro di analisi è un'opera indipendente, parte del portfolio di contenuti offerto dall'azienda <a href="http://hintclub.co" target="_blank">Hintclub S.r.l.s.</a> e in nessun modo affiliata con Studio Ghibli o Lucky Red. Tutti i diritti riguardanti nomi, loghi, contenuti audiovisivi e altri trademark sono riservati ai rispettivi detentori di copyright.</p>
 						<div class="person"></div>
 						<h3>Varchiamo insieme la soglia della fantasia dunque, e prapariamoci ad un'avventura indimenticabile.</h3>
 						<div class="colonne clearfix">
