--- a/include/footer.html
+++ b/include/footer.html
@@ -1,23 +1,17 @@
 <div class="button-top clearfix">
-					<a href="#"><img src="../assets/plane.png" alt="Torna in cima"><br>Torna in cima</a>
+					<a href="#top"><img src="../assets/plane.png" alt="Torna in cima"><br>Torna in cima</a>
 				</div>
 				</section>
 				<footer>
 					<div class="main-footer clearfix">
 						<small><a href="credits">Note legali</a></small>
-						<div class="legal">&copy; 2015 Hintclub S.r.l.s., All rights reserved</div>
+						<div class="legal">&copy; 2015 <a href="http://hintclub.co" target="_blank">Hintclub S.r.l.s.</a>, All rights reserved</div>
 					</div>
 				</footer>
 			</div>
 		</div>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-		<script>
-			$(document).ready(function(){
- 				$(".navbutton").click(function(){
-    				$(".navmenu").toggleClass("navmenu-open"), $(".navbutton").toggleClass("navbutton-open");
-  				});
-			});
-		</script>
+		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+		<script src="../js/jquery.js"></script>
 		<script>
 			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
