Added Marnie and Favole to menu

--- a/include/menu.html
+++ b/include/menu.html
@@ -55,6 +55,9 @@
 								<li id="menu-bluray"><a href="bluray">Edizione Blu-ray</a></li>
 								<li id="menu-soundtrack"><a href="soundtrack">Colonna sonora</a></li>
 								<div class="navspazio"></div>
+								<li id="menu-marnie"><a href="http://www.quandoceramarnie.it" target="_blank" class="link-evidenziato">"Quando c'era Marnie"</a></li>
+								<li id="menu-favole"><a href="https://www.youtube.com/channel/UC4yuWEWTibVsjyp-Zyrc72g" target="_blank" class="link-evidenziato">Le Favole d'Animazione</a></li>
+								<div class="navspazio"></div>
 								<li id="menu-credits"><a href="credits">Credits</a></li>
 							</ul>
 							<img id="logoghibli" src="../assets/logo_ghibli.png" alt="Studio Ghibli">
