--- a/m/css/style.css
+++ b/m/css/style.css
@@ -159,6 +159,8 @@ article {
 	font-size: 1.625rem;
 	text-align: center;
 	margin: 0;
+	color: #f6e48c;
+	text-shadow: 1px 1px 2px rgba(0, 0, 0, .5), -1px -1px 2px rgba(0, 0, 0, .5);
 }
 .button-top a {
 	color: #666;
@@ -631,4 +633,8 @@ body#menu-home .button-top {
 body#menu-critica2 iframe,
 body#menu-soundtrack iframe {
 	width: 95%;
+}
+nav a.link-evidenziato {
+	color: #f6e48c;
+	text-shadow: 1px 1px 2px rgba(0, 0, 0, .5), -1px -1px 2px rgba(0, 0, 0, .5);
 }
